--- a/website/src/App.scss
+++ b/website/src/App.scss
@@ -1,5 +1,5 @@
 .App {
-    text-align: center;
+    //text-align: center;
 }
 
 .App-logo {
@@ -36,3 +36,14 @@
         transform: rotate(360deg);
     }
 }
+
+h1 h2 h3 {
+    text-align: left;
+}
+
+p {
+    text-align: left;
+    font-size: 16pt;
+}
+
+@import "~bootstrap/scss/bootstrap";
