--- a/website/src/App.scss
+++ b/website/src/App.scss
@@ -46,4 +46,18 @@ p {
     font-size: 16pt;
 }
 
+span {
+    text-align: left;
+    font-size: 16pt;
+}
+
+ul {
+    text-align: left;
+    font-size: 16pt;
+}
+
+.text-content {
+    padding: 50px 0 50px 0;
+}
+
 @import "~bootstrap/scss/bootstrap";
