Made TitleRow its own component for easier reusability Misc content/style updates to Academics and Projects

--- a/website/src/App.scss
+++ b/website/src/App.scss
@@ -60,4 +60,8 @@ ul {
     padding: 50px 0 50px 0;
 }
 
+.expand-text {
+    font-size: 13pt;
+    width: 95%;
+}
 @import "~bootstrap/scss/bootstrap";
